docs: update documentation for NieR server GUI and UI improvements